<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:textColor="#000000"
            android:textSize="17sp"
            android:layout_gravity="center"
            android:text="@string/Gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btcancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="btcanceltype"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="#3575D3"
            android:textSize="15sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btdone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@android:color/transparent"
            android:onClick="btdonetype"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="#3575D3"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="bottom"
            android:background="@drawable/line" />
    </FrameLayout>

    <com.shawnlin.numberpicker.NumberPicker
        app:np_textSize="15dp"
        android:id="@+id/spicker"
        android:descendantFocusability="blocksDescendants"
        android:layout_width="match_parent"
        android:layout_height="130dp">
    </com.shawnlin.numberpicker.NumberPicker>

</LinearLayout>