<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_Form">

    <LinearLayout
        android:focusableInTouchMode="true"
        android:id="@+id/layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/title" android:id="@+id/item_title"/>


        <LinearLayout
            android:layout_weight="1"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <EditText
                android:nextFocusDown="@+id/gender"
                android:id="@+id/mobilenumber"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_phone_black_24dp"
                android:drawablePadding="5dp"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:paddingLeft="0dp"
                android:textColorHint="#999"
                android:textSize="14sp" />
            <EditText
                android:textColor="#000000"
                android:nextFocusDown="@+id/last_name"
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="5dp"
                android:hint="@string/FirstName"
                android:inputType="textPersonName"
                android:paddingLeft="0dp"
                android:textColorHint="#999"
                android:textSize="14sp" />

            <EditText
                android:nextFocusDown="@+id/mobilenumber"
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="5dp"
                android:hint="@string/LastName"
                android:inputType="textPersonName"
                android:paddingLeft="0dp"
                android:textColorHint="#999"
                android:textSize="14sp" />



            <EditText
                android:nextFocusDown="@+id/dob"
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/gen"
                android:drawablePadding="5dp"
                android:focusable="false"
                android:hint="@string/gender"
                android:onClick="OnClickGender"
                android:paddingLeft="0dp"
                android:textColorHint="#999"
                android:textSize="14sp" />

            <EditText
                android:nextFocusDown="@+id/id_type"
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_date_range_black_24dp"
                android:drawablePadding="5dp"
                android:focusable="false"
                android:hint="@string/dob"
                android:inputType="date"
                android:onClick="OnClickDOB"
                android:paddingLeft="0dp"
                android:textColorHint="#999"
                android:textSize="14sp" />

            <EditText
                android:nextFocusDown="@+id/id_number"
                android:onClick="OnClickIDType"
                android:focusable="false"
                android:id="@+id/id_type"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_perm_contact_calendar_black_24dp"
                android:drawablePadding="5dp"
                android:hint="@string/type"
                android:paddingLeft="0dp"
                android:textColorHint="#999"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/id_number"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_recent_actors_black_24dp"
                android:drawablePadding="5dp"
                android:hint="@string/Number"
                android:inputType="number"
                android:maxLength="14"
                android:paddingLeft="0dp"
                android:textColorHint="#999"
                android:textSize="14sp" />



            <LinearLayout
                android:orientation="vertical"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:layout_height="0dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:text="@string/front"
                    android:textColor="#000000"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_weight="1"
                    android:background="@drawable/dotted"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                    <ImageView
                        android:padding="5dp"
                        android:id="@+id/cam"
                        android:onClick="OnClickCamerafront"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1"
                        android:src="@drawable/came" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp">

        </LinearLayout>
    </LinearLayout>

</FrameLayout>