<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/item1"
        android:padding="10dp"
        android:textColor="#ffffff"
        android:background="#E91E63"
        android:textAlignment="center"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <ImageView
                android:src="@drawable/silde1"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="0.6"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <Button
                android:textSize="15dp"
                android:layout_weight="0.6"
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"
                android:background="@drawable/roundbutton"
                android:onClick="OnClickLogin"
                android:text="@string/login"
                android:textColor="@color/click_button" />
            <TextView
                android:textSize="15dp"
                android:layout_weight="0.5"
                android:onClick="OnClickRegister"
                android:clickable="true"
                android:textColor="@color/ch_color1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/register" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:paddingBottom="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="1dp"
                android:onClick="OnStaffInformation">

                <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/bordermain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView

                        android:id="@+id/local"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.05"
                        android:src="@drawable/user3" />
                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1"
                        android:gravity="center|top"
                        android:text="@string/information"
                        android:textColor="#464646"
                        android:textSize="15dp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="1dp"
                android:onClick="OnClickExchangeRate">

                <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/bordermain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:padding="5dp"
                        android:id="@+id/exchange"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.05"
                        android:src="@drawable/updateuse" />
                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1"
                        android:gravity="center|top"
                        android:text="@string/request"
                        android:textColor="#464646"
                        android:textSize="15dp" />
                </LinearLayout>


            </LinearLayout>



            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="OnClickSetting"
                android:padding="1dp">



                <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/bordermain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:padding="5dp"
                        android:id="@+id/setting"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.05"
                        android:src="@drawable/auth" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1"
                        android:gravity="center|top"
                        android:text="@string/reports"
                        android:textColor="#464646"
                        android:textSize="15dp" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="OnClickMyQRCode"
                android:padding="1dp">


                <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/bordermain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/rbalance"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.05"
                        android:padding="10dp"
                        android:src="@drawable/balances" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1"
                        android:gravity="center|top"
                        android:text="@string/balance"
                        android:textColor="#464646"
                        android:textSize="15dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="OnClickNews"
                android:padding="1dp">



                <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/bordermain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/news"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.05"
                        android:src="@drawable/usermale" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1"
                        android:gravity="center|top"
                        android:text="@string/approve"
                        android:textColor="#464646"
                        android:textSize="15dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="OnClickContactUs"
                android:padding="1dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/bordermain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/contactus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.05"
                        android:padding="7dp"
                        android:src="@drawable/contacts" />
                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1"
                        android:gravity="center|top"
                        android:text="@string/contact"
                        android:textColor="#464646"
                        android:textSize="15dp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <LinearLayout
                android:padding="1dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="OnClickTips">

                <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/bordermain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/tips"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.05"
                        android:padding="5dp"
                        android:src="@drawable/code1" />

                    <TextView
                        android:textSize="15dp"
                        android:gravity="center|top"
                        android:id="@+id/txvtips"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1"
                        android:text="@string/qrcode"
                        android:textColor="@color/ch_color_bottom" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:padding="1dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="OnClickFAQS">

                <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/bordermain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:padding="5dp"
                        android:id="@+id/faq"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.05"
                        android:src="@drawable/about" />

                    <TextView
                        android:textSize="15dp"
                        android:gravity="center|top"
                        android:layout_weight="0.1"
                        android:id="@+id/txvfaqs"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/about"
                        android:textColor="@color/ch_color_bottom" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:padding="1dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="OnClickHelp">

                <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/bordermain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:padding="5dp"
                        android:layout_weight="0.05"
                        android:id="@+id/help"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/settings" />

                    <TextView
                        android:textSize="15dp"
                        android:gravity="center|top"
                        android:layout_weight="0.1"
                        android:id="@+id/txvhelp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/setting"
                        android:textColor="@color/ch_color_bottom" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>